Fixes view on mobile devices

--- a/website/static/cricbotstyling.css
+++ b/website/static/cricbotstyling.css
@@ -29,7 +29,6 @@ body {
     right: 0;*/
     display: flex;
 }
-
 .navbar-custom {
     background-color: #4CAF50;
 }
@@ -64,6 +63,7 @@ body {
     background: url('cricket.jpg') no-repeat;
     background-size: cover;
     background-position: center;
+    border-radius: 16px;
 }
 
 .login-box .summary {
@@ -75,7 +75,7 @@ body {
     height: 100%;
     color: white;
     top:50px;
-    
+    border-radius: 16px;
 }
 .login-box .registration {
     position: absolute;
@@ -87,7 +87,7 @@ body {
     background-color: transparent;
     backdrop-filter: blur(30px);
     color: white;
-
+    border-radius: 16px;
 }
 
 .login-box input{
@@ -367,6 +367,12 @@ input[type="submit"]:hover {
 
   /* Media query for mobile */
 @media (max-width: 768px) {
+    body {
+        background-image: url('lords.jpg');
+        background-size: cover;
+        background-position: center center;
+        background-attachment: fixed;
+    }
     .feature-section {
       flex-direction: column;
       height: auto;
@@ -374,6 +380,35 @@ input[type="submit"]:hover {
     
     .feature {
       margin: 20px 0;
+    }
+
+    .login-box {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%,-50%);
+        width: 75%;
+        height: 500px;
+        background: url('cricket.jpg') no-repeat;
+        background-size: cover;
+        background-position: center;
+        border-radius: 16px;
+    }
+    .login-box .summary {
+        visibility: hidden;
+    }
+    .login-box .registration {
+        position: absolute;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 100%;
+        height: 100%;
+        background-color: transparent;
+        backdrop-filter: blur(30px);
+        color: white;
+        border-radius: 16px;
+    
     }
   }
 
